src/test/deca/context/valid/declaVariable/expressionOnTheLeft.deca
// Description:
//    Déclaration de variables
//
// Résultats:
//    Ligne 11:
//
// Historique:
//    Créé le 10/01/2024

{
   int b = 2;
   int a = b;
}
